--- a/html/scss/ionic.app.scss
+++ b/html/scss/ionic.app.scss
@@ -16,7 +16,7 @@ $dark:                            #444 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
-$ionicons-font-path: "../lib/ionic/fonts" !default;
+$ionicons-font-path: "../ionic/fonts" !default;
 
 // Include all of Ionic
-@import "client/lib/ionic/scss/ionic";
+@import "../ionic/scss/ionic";
