--- a/client/app/templates/menu.html
+++ b/client/app/templates/menu.html
@@ -21,6 +21,9 @@
         <ion-item menu-close ui-sref="home">
           Home
         </ion-item>
+        <ion-item menu-close ui-sref="app.page.index">
+          Publish
+        </ion-item>
         <ion-item menu-close ui-sref="app.dash">
           Dash
         </ion-item>
