--- a/client/app/templates/menu.html
+++ b/client/app/templates/menu.html
@@ -1,39 +1,37 @@
 <ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    <ion-side-menu-content drag-content="false">
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close ui-sref="home">
-          Home
-        </ion-item>
-        <ion-item menu-close ui-sref="app.page.index">
-          Publish
-        </ion-item>
-        <ion-item menu-close ui-sref="app.dash">
-          Dash
-        </ion-item>
-        <ion-item menu-close ui-sref="app.chats">
-          Chats
-        </ion-item>
-        <ion-item menu-close ui-sref="app.setting">
-          Setting
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+    <ion-side-menu side="left">
+        <ion-header-bar class="bar-stable">
+            <h1 class="title">Left</h1>
+        </ion-header-bar>
+        <ion-content>
+            <ion-list>
+
+                <ion-item menu-close ui-sref="app.home">
+                    Home
+                </ion-item>
+                <ion-item menu-close ui-sref="app.order.search">
+                    공사발주서등록 조회
+                </ion-item>
+                <ion-item menu-close ui-sref="app.completion.search">
+                    공사준공등록 조회
+                </ion-item>
+                <ion-item menu-close ui-sref="app.map.map">
+                    다음 지도 API
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
 </ion-side-menus>
